--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,20 @@
-* {box-sizing: border-box;
+* {
+    box-sizing: border-box;
 }
+
 body {
-margin: 0;
-font-size: 1rem;
-line-height: 1.5;
-color: #333;
-overflow-x: hidden;
+    margin: 0;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #333;
+    overflow-x: hidden;
 }
 
 .header {
-height: 100vh;
-display: flex;
-align-items: center;
-color: #fff;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    color: #fff;
 }
 
 .conten {
@@ -31,24 +33,27 @@ color: #fff;
     height: 100vh;
     overflow: hidden;
 }
+
 .header-video video {
-min-width: 100%;
-min-height: 100%;
+    min-width: 100%;
+    min-height: 100%;
 }
 
 .header-overlay {
     height: 100vh;
     width: 100vw;
     position: absolute;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
     background: #303952;
-z-index: 1;
-opacity: .5;
+    z-index: 1;
+    opacity: .5;
 }
+
 .header-content {
     z-index: 2;
 }
+
 .header-content h1 {
     text-align: center;
     color: blanchedalmond;
@@ -57,9 +62,9 @@ opacity: .5;
     font-family: 'Lobster', cursive;
 }
 
-.header-content p{
-    text-align: left;
-    font-size: 2rem;
+.header-content p {
+    text-align: center;
+    font-size: 3rem;
     display: block;
     padding-bottom: 2rem;
     font-family: 'Lobster', cursive;
@@ -67,8 +72,8 @@ opacity: .5;
 
 .btn {
     background: #947de4;
-    color:#fff;
+    color: #fff;
     font-size: 2rem;
-    padding: 1rem 2rem;
+    padding: 0;
     text-decoration: none;
 }
